<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>karakal</artifactId>
	<groupId>de.svenkubiak</groupId>
	<version>1.1.16-SNAPSHOT</version>
	<packaging>jar</packaging>
	<url>https://github.com/svenkubiak/karakal</url>
	<properties>
		<mangooio.version>10.9.0</mangooio.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jdk.version>25</jdk.version>
	</properties>
	<build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*</include>
				</includes>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
				<configuration>
					<release>${jdk.version}</release>
					<debug>false</debug>
					<showDeprecation>true</showDeprecation>
					<fork>true</fork>
					<compilerArgs>
						<arg>-parameters</arg>
						<arg>-J-Xmx2G</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.gaul</groupId>
				<artifactId>modernizer-maven-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<javaVersion>${jdk.version}</javaVersion>
				</configuration>
				<executions>
					<execution>
						<id>modernizer</id>
						<phase>verify</phase>
						<goals>
							<goal>modernizer</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.mangoo</groupId>
				<artifactId>mangooio-maven-plugin</artifactId>
				<version>${mangooio.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.6.0-M1</version>
			</plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.21.0</version>
                <configuration>
                    <ruleSet>
                        <ignoreVersions>
                            <ignoreVersion>
                                <type>regex</type>
                                <version>.*(beta|Beta|alpha|Alpha|rc|RC).*</version>
                            </ignoreVersion>
                        </ignoreVersions>
                    </ruleSet>
                </configuration>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<excludes>
						<exclude>**/log4j2-test*</exclude>
					</excludes>
				</configuration>
			</plugin>
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>5.7.0.6970</version>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
								<transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
								<transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer" />
								<transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer" />
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>io.mangoo.core.Application</mainClass>
									<manifestEntries>
										<Multi-Release>true</Multi-Release>
									</manifestEntries>
								</transformer>
							</transformers>
							<artifactSet>
								<excludes>
									<exclude>junit:*</exclude>
									<exclude>rhino:*</exclude>
									<exclude>io.bit3:*</exclude>
									<exclude>com.hazelcast:*</exclude>
									<exclude>org.eclipse.jetty:*</exclude>
									<exclude>org.glassfish.jersey.media:*</exclude>
									<exclude>org.glassfish.jersey.core:*</exclude>
									<exclude>org.glassfish.hk2:*</exclude>
									<exclude>org.glassfish.hk2.external:*</exclude>
									<exclude>com.google.code.findbugs:*</exclude>
									<exclude>com.google.xing:*</exclude>
									<exclude>com.icegreen:*</exclude>
									<exclude>org.hamcrest:*</exclude>
									<exclude>org.cactoos:*</exclude>
									<exclude>org.llorllale:*</exclude>
								</excludes>
							</artifactSet>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<promoteTransitiveDependencies>true</promoteTransitiveDependencies>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
							<finalName>karakal</finalName>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.6.3</version>
				<configuration>
					<rules>
						<DependencyConvergence>
							<uniqueVersions>false</uniqueVersions>
						</DependencyConvergence>
					</rules>
				</configuration>
				<executions>
					<execution>
						<id>enforce</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<phase>validate</phase>
					</execution>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.9.10</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
					<execution>
						<id>enforce-ban-circular-dependencies</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<banCircularDependencies />
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>extra-enforcer-rules</artifactId>
						<version>1.12.0</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>io.mangoo</groupId>
			<artifactId>mangooio-core</artifactId>
			<version>${mangooio.version}</version>
		</dependency>
        <dependency>
            <groupId>com.webauthn4j</groupId>
            <artifactId>webauthn4j-core</artifactId>
            <version>0.31.8.RELEASE</version>
            <exclusions>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-databind</artifactId>
                </exclusion>
				<exclusion>
					<groupId>com.fasterxml.jackson.core</groupId>
					<artifactId>jackson-annotations</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>de.svenkubiak</groupId>
            <artifactId>simple-http</artifactId>
            <version>2.0.6</version>
        </dependency>
        <dependency>
            <groupId>org.bitbucket.b_c</groupId>
            <artifactId>jose4j</artifactId>
            <version>0.9.6</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
		<dependency>
			<groupId>io.mangoo</groupId>
			<artifactId>mangooio-test</artifactId>
			<version>${mangooio.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
    <profiles>
        <profile>
            <id>ci</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>0.8.15</version>
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>report</id>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                                <configuration>
                                    <formats>
                                        <format>XML</format>
                                    </formats>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>